overlays/ing-authentified.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "*"
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-nginx-secret
