overlays/ing-external.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: "*"
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
