overlays/ing-local.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "*"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # ip from 192.168.1.64 to 192.168.1.127
    ingress.kubernetes.io/whitelist-source-range: "192.168.1.64/26"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
